--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,6 +13,14 @@ apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 
 android {
+    signingConfigs {
+        config {
+            keyAlias 'starbasket'
+            keyPassword 'starbasket'
+            storeFile file('E:/All Keystore/starbasket_dada/starbasket.jks')
+            storePassword 'starbasket'
+        }
+    }
     compileSdkVersion 27
     defaultConfig {
         applicationId "apextechies.starbasketseller"
@@ -21,12 +29,16 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        signingConfig signingConfigs.config
     }
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            signingConfig signingConfigs.config
         }
+    }
+    productFlavors {
     }
 }
 
@@ -44,7 +56,7 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
     compile "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     compile 'com.google.firebase:firebase-core:12.0.1'
-   // implementation 'com.google.android.gms:play-services:12.0.1'
+    // implementation 'com.google.android.gms:play-services:12.0.1'
     compile 'com.firebase:digitsmigrationhelpers:0.1.1'
     compile 'com.google.firebase:firebase-core:15.0.2'
     compile 'com.google.firebase:firebase-auth:15.0.0'
