--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -42,9 +42,9 @@
         </activity>
 
         <activity android:name=".activity.ProductListActivity"
-            android:theme="@style/AppTheme.NoActionBar">
-
-        </activity>
+            android:theme="@style/AppTheme.NoActionBar"/>
+        <activity android:name=".activity.ProductVarientDeleteAcvtivity"
+            android:theme="@style/AppTheme.NoActionBar"/>
 
         <meta-data
             xmlns:tools="http://schemas.android.com/tools"
