--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,7 +34,7 @@
         </activity>
         <activity android:name=".activity.AddProductAcvtivity"
             android:theme="@style/AppTheme.NoActionBar"
-            android:label="@string/add_product">
+            android:label="@string/add_varient">
 
         </activity>
         <activity android:name=".splash.SignUpActivity"
